<resources>
    <string name="app_name">QR_Scanner</string>
    <string name="nav_scanner">掃描</string>
    <string name="nav_create">建立</string>
    <string name="nav_history">紀錄</string>
    <string name="nav_setting">設定</string>


    <string name="generate_hint">輸入文字以產生QR碼</string>
    <string name="generate_confirm">產生</string>
    <string name="share">分享</string>
    <string name="share_to">分享到</string>
    <string name="copy">複製</string>
    <string name="close">關閉</string>

    <!-- Scan Result Dialog -->
    <string name="scan_result_title">掃描結果</string>
    <string name="scan_result_copy">複製</string>
    <string name="scan_result_close">關閉</string>
    <string name="scan_result_open_web">打開網頁</string>
    <string name="scan_result_copied">已複製到剪貼簿</string>
    <string name="scan_result_open_error">無法開啟網頁</string>
    <string name="scan_result_clipboard_label">QR Code 掃描結果</string>

    <!-- AdMob IDs -->
    <string name="admob_app_id">@string/admob_app_id_test</string>
    <string name="admob_app_id_prod">ca-app-pub-7779749898168447~2432206858</string>
    <string name="admob_app_id_test">ca-app-pub-3940256099942544~3347511713</string>
    <!-- 當前使用的廣告 ID (開發測試時設為測試 ID) -->
    <string name="admob_banner_unit_id">@string/admob_banner_unit_id_test</string>
    <string name="admob_banner_unit_id_prod">ca-app-pub-7779749898168447/8806043518</string>
    <string name="admob_banner_unit_id_test">ca-app-pub-3940256099942544/6300978111</string>
</resources>